# lampscores

./: .gitattributes  .gitignore  README.md  pyproject.toml
shiny-R-lamp/: app.R  manifest.json
shiny-python-lamp/: app.py  requirements.txt
src/lampscores/: __init__.py  congress_canonical_names.py  lampscores.py  llm_openai_client.py
